Fixed too short minicart items block at checkout page

--- a/web/css/layout/checkout/_summary.less
+++ b/web/css/layout/checkout/_summary.less
@@ -94,9 +94,6 @@
                     font-weight: 450;
                 }
             }
-            ol.minicart-items {
-                max-height: 26vh;
-            }
         }
     }
 }
